--- a/Frontend - Yumme/src/App.css
+++ b/Frontend - Yumme/src/App.css
@@ -75,7 +75,7 @@
   }
 
   h2 {
-    @apply scroll-m-20 border-b  text-3xl font-semibold tracking-tight first:mt-0;
+    @apply scroll-m-20  text-3xl font-semibold tracking-tight first:mt-0;
   }
 
   h3 {
