Moved the theme button to the appearance section in the user profile

--- a/Frontend - Yumme/src/App.css
+++ b/Frontend - Yumme/src/App.css
@@ -44,7 +44,7 @@
     --card-foreground: 178.6 5% 100%;
     --popover: 178.6 50% 5%;
     --popover-foreground: 178.6 5% 100%;
-    --primary: 178.6 84.3% 10%;
+    --primary:101.6, 84.3%,70%;
     --primary-foreground: 0 0% 100%;
     --secondary: 178.6 30% 20%;
     --secondary-foreground: 0 0% 100%;
